--- a/src/index.css
+++ b/src/index.css
@@ -178,6 +178,8 @@ ul {
   flex-wrap: wrap;
   gap: 1rem;
   padding-bottom: 1rem;
+
+  position: relative;
 }
 
 .job-card {
@@ -287,6 +289,214 @@ ul {
   background-color: rgb(57, 57, 204);
 }
 
+/* Single Page Job */
+.single-job {
+  background-color: #EBF4FF;
+  min-height: 100vh;
+}
+
+.back-arrow {
+  color: rgb(56, 56, 214);
+  background-color: #fff;
+  width: 100%;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.single-job-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.single-job-main-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 60%;
+}
+
+.single-job-title {
+  width: 100%;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.single-job-type {
+  display: block;
+  margin-bottom: 1rem;
+  color: rgb(138, 133, 133);
+}
+
+.single-job-location {
+  display: block;
+  margin-top: 1rem;
+  color: rgb(196, 18, 18)
+}
+
+.single-job-description {
+  width: 100%;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.single-job-desc-title {
+  color: rgb(66, 66, 230);
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
+  font-weight: bold;
+}
+
+.single-job-desc {
+  padding-bottom: 1rem;
+  line-height: 1.5rem;
+}
+
+.single-job-salary {
+  color: rgb(66, 66, 230);
+  padding-bottom: 1rem;
+  font-weight: bold;
+}
+
+.single-job-side-content {
+  width: 35%;
+}
+
+.company-info {
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  width: 100%;
+}
+
+.manage-job {
+  padding: 1rem;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  width: 100%;
+  margin-top: 1rem;
+  border-radius: 10px;
+}
+
+.single-job-email,
+.single-job-phone {
+  display: block;
+  width: 100%;
+  background-color: #EBF4FF;
+  padding: 0.5rem;
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+.single-job-company-name {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  color: #444343;
+}
+
+.single-job-company-desc {
+  margin-bottom: 1.5rem;
+}
+
+.single-job-content .btn {
+  width: 100%;
+  border: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+.single-job-content .btn-edit {
+  background-color: rgb(66, 66, 230);
+}
+
+.single-job-content .btn-edit:hover {
+  background-color: rgb(103, 103, 230);
+}
+
+.single-job-content .btn-delete {
+  background-color: rgb(218, 49, 49);
+}
+
+.single-job-content .btn-delete:hover {
+  background-color: rgb(230, 103, 103);
+}
+
+/* Add Job */
+.add-job {
+  background-color: rgb(236, 240, 245);
+  min-height: 100vh;
+  padding: 2rem 0 2rem 0;
+}
+
+.add-job-form {
+  background-color: #fff;
+  width: 40%;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem 2rem 2rem;
+
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-job-title {
+  padding: 2rem 0 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.form label {
+  padding: 0.5rem 0;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.form input,
+.form select,
+.form textarea {
+  padding: 0.5rem;
+  border-radius: 5px;
+  outline: none;
+  border: solid 1px gray;
+}
+
+.form input:focus,
+.form select:focus,
+.form textarea:focus {
+  border: solid 2px rgb(107, 107, 216);
+}
+
+.form input,
+.form textarea,
+.form select {
+  margin-bottom: 0.5rem;
+}
+
+.btn-add-job {
+  width: 100%;
+  border: none;
+  background-color: rgb(83, 83, 226);
+  font-weight: bold;
+}
+
 
 /* Media Query */
 @media screen and (max-width: 768px) {
@@ -313,11 +523,20 @@ ul {
   .job-card {
     width: 80%;
   }
+
+  .single-job-content {
+    flex-direction: column;
+  }
+
+  .single-job-main-content,
+  .single-job-side-content {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 900px) {
   .content-job-area {
-    width: 100%;
+    position: relative;
     /* border: solid 1px red; */
   }
 
