--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
-  /* overflow: hidden; */
 }
 
 body {
   font-family: Arial, sans-serif;
+  /* overflow: hidden; */
 }
 
 .wrapper {
@@ -530,7 +530,7 @@ ul {
   .menu {
     width: 100px;
     background-color: #3333E0;
-    margin: 0 -80px 0;
+    margin: 0 -60px 0;
     position: absolute;
     top: 0;
     right: 0;
@@ -541,15 +541,16 @@ ul {
 
   .menu-icon {
     display: block;
-    right: -60px;
+    right: -10px;
+    transition: all 0.5s;
   }
 
   .hide-menu {
-    margin: 0 -180px 0 0;
+    display: none;
   }
 
   .show-menu {
-    margin: 50px -80px 0 0;
+    display: block;
   }
 
   ul {
